tests/src/frontend/typechecking/exhaustiveness/invalid/tuple_nested_boolean_wildcard2.sk
fun test(): String {
  (1, true) match {
  | (1, true) -> "Fail\n"
  | (_, true) -> "Fail\n"
  }
}
